# inventory-manager

./: LICENSE  Makefile  Procfile  myloglib-0.1.0-py3-none-any.whl  newrelic.ini  pyproject.toml  requirements.txt  wip_telegram.py
.github/: dependabot.yml
docs/: class_diagram.md  planning  planning.md
src/: main.py  settings.py
src/adapters/inbound/fastapi/: controller.py  dependencies.py  dtos.py  exceptions.py  presenter.py
src/adapters/inbound/telegram_bot/: application.py  bot.py  controller.py  presenter.py
src/adapters/outbound/mongo/: connection.py
src/adapters/outbound/mongo/documents/: client.py  item.py  order.py  order_item.py
src/adapters/outbound/mongo/repositories/: client.py  item.py  order.py
src/adapters/outbound/repositories/mongo/: client.py  connection.py  item.py  order.py
src/adapters/outbound/repositories/mongo/documents/: client.py  item.py  order.py  order_item.py
src/domain/: exceptions.py
src/domain/entities/: client.py  entity.py  item.py  order.py
src/domain/factories/: order.py
src/domain/ports/inbound/items/: dtos.py  ports.py
src/domain/ports/inbound/orders/: dtos.py  ports.py
src/domain/ports/outbound/repositories/: client.py  item.py  order.py
src/domain/ports/repositories/: client.py  item.py  order.py
src/domain/repositories/: item.py
src/domain/use_cases/: add_item.py  cancel_order.py  create_goomer_order.py  create_manual_order.py  create_order.py  list_items.py  remove_item.py  set_inventory_quantities.py  set_inventory_quantity.py
src/domain/use_cases/add_item/: add_item.py  dtos.py
src/domain/use_cases/cancel_order/: cancel_order.py  dtos.py
src/domain/use_cases/create_order/: create_order.py  dtos.py
src/domain/use_cases/remove_item/: dtos.py  remove_item.py
src/domain/use_cases/set_inventory_quantity/: dtos.py  set_inventory_quantity.py
tests/: conftest.py  test_add_item.py  test_cancel_order.py  test_create_order.py  test_remove_item.py  test_set_inventory_quantity.py
tests/adapters/inbound/fastapi/: conftest.py  test_controller.py
tests/adapters/inbound/telegram_bot/: test_controller.py  test_data.py
tests/adapters/outbound/mongo/repositories/: test_client.py  test_item.py  test_order.py
tests/adapters/outbound/repositories/: test_client.py  test_item.py  test_order.py
tests/domain/use_cases/: test_add_item.py  test_cancel_order.py  test_create_goomer_order.py  test_create_manual_order.py  test_create_order.py  test_list_items.py  test_remove_item.py  test_set_inventory_quantity.py
