[tool.poetry]
name = "inventory-manager"
version = "0.1.0"
description = ""
authors = ["Thiago Benine <thiagobenine@gmail.com>"]
readme = "README.md"
packages = [{include = "inventory_manager"}]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.0"
pydantic = "^2.6.3"
ruff = "^0.3.3"
pymongo = "^4.7.2"
mongoengine = "^0.28.2"
pydantic-mongo = "^2.2.0"
mongomock = "^4.1.2"
setuptools = "^69.5.1"
python-telegram-bot = {extras = ["webhooks"], version = "^21.1.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**migrations**",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "UP", "N", "I", "SIM", "C4", "RUF"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"tests/adapters/inbound/telegram_bot/test_data.py" = ["E501", "W291", "RUF001"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.isort]
known-first-party = ["src"]